// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Editor should be readOnly 1`] = `
<div class="form-group">
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" id="textFieldEditorContainer" name="textFieldEditor"></div>
    </div>
  </div>
</div>
`;

exports[`Field Editor should have a helptext 1`] = `
<div class="form-group">
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" id="textFieldEditorContainer" name="textFieldEditor"></div>
    </div>
  </div><span class="form-text">Type something</span>
</div>
`;

exports[`Field Editor should have a key 1`] = `
<div class="form-group">
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" id="textFieldEditorContainer" name="textFieldEditor"></div>
    </div>
  </div>
</div>
`;

exports[`Field Editor should have a label 1`] = `
<div class="form-group"><label>label </label>
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" id="textFieldEditorContainer" name="textFieldEditor"></div>
    </div>
  </div>
</div>
`;

exports[`Field Editor should have a placeholder 1`] = `
<div class="form-group">
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" data-placeholder="Placeholder" id="textFieldEditorContainer" name="textFieldEditor"></div>
    </div>
  </div>
</div>
`;

exports[`Field Editor should have a spritemap 1`] = `
<div class="form-group">
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" id="textFieldEditorContainer" name="textFieldEditor"></div>
    </div>
  </div>
</div>
`;

exports[`Field Editor should have a value 1`] = `
<div class="form-group">
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" id="textFieldEditorContainer" name="textFieldEditor">value</div>
    </div>
  </div>
</div>
`;

exports[`Field Editor should have an id 1`] = `
<div class="form-group">
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" id="textFieldEditorContainer" name="textFieldEditor"></div>
    </div>
  </div>
</div>
`;

exports[`Field Editor should not be required 1`] = `
<div class="form-group">
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" id="textFieldEditorContainer" name="textFieldEditor"></div>
    </div>
  </div>
</div>
`;

exports[`Field Editor should render Label if showLabel is true 1`] = `
<div class="form-group"><label>text </label>
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" id="textFieldEditorContainer" name="textFieldEditor"></div>
    </div>
  </div>
</div>
`;

exports[`Field Editor should trigger AlloyEditor actionPerformed method 1`] = `
<div class="form-group">
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" id="textFieldEditorContainer" name="textFieldEditor"></div>
    </div>
  </div>
</div>
`;
